fist touches to page

--- a/css/page.css
+++ b/css/page.css
@@ -47,7 +47,7 @@ html, body {
     padding-left: 50px;
 }
 .contact-table {
-    width: 33%;
+    width: 400px;
     margin: 0 auto;
     text-align: left;
 }
