--- a/css/page.css
+++ b/css/page.css
@@ -27,6 +27,7 @@ html, body {
     text-align: center;
     background-color: rgba(0, 0, 0, 0.4);
     margin: 0 auto;
+    padding-top: 10%;
     height: 100%;
     padding-left: 25px;
     padding-top: 15px;
